--- a/public/index.html
+++ b/public/index.html
@@ -145,6 +145,40 @@ border:1px solid black;
 
 }
 
+.form-holder {
+  display: flex;
+  margin-bottom: 10px;
+}
+
+.input-field input {
+  width: 100px;
+}
+
+.add, .remove {
+  display: block;
+  border: 1px solid #ccc;
+  padding: 2px 10px;
+  margin-left: 10px;
+  cursor: pointer;
+  width:100px;
+}
+
+.add:hover {
+  background: #eee;
+}
+
+.remove {
+  display: none;
+}
+
+.form-holder-append .remove {
+  display: block;
+}
+
+body {
+  margin: 20px;
+}
+
 </style>
 
 </head>
@@ -159,8 +193,8 @@ border:1px solid black;
   <a href="javascript:void(0)" class="closebtn" onclick="closeNav()">&times;</a>
 		<a class="a">Tasks</a>
 		<a class="b">Client</a>
-		<a class="d">Services</a>
-		<a class="e">Contact</a>
+		<a class="c">Services</a>
+		<a class="d">Contact</a>
 </div>
 
 
@@ -194,11 +228,14 @@ function checkEdits() {
 if(localStorage.userEdits!=null)
 document.getElementById("edit").innerHTML = localStorage.userEdits;
 }
+
+
 </script>
 
 <div class="content">
 
 		<div class="Tasks">
+		
 		
 			<div class="grid-container">
   <div class="grid-item" contenteditable="true">contact lead</div>
@@ -221,13 +258,42 @@ document.getElementById("edit").innerHTML = localStorage.userEdits;
   <div class="grid-item" onclick='update_link(this)'>Status</div>
   <input type="button" value="save my edits" onclick="saveEdits()" >
 </div>
- 
-			
-		</div>
+</div>
+
+
 
 		<div class="Client">
-		
-		<div class="wrapper">
+		<div id="Client-info">
+        <blockquote>Client Leads</blockquote>
+        <div class="row">
+          <div class="form-holder col-xs-12">
+            <div class="input-field col s4">
+                <input type="text" id="clients" placeholder="Client Name"/>
+            </div>
+            <div class="input-field col s2">
+                <input type="text" id="clients" placeholder="Email" />
+            </div>
+			<div class="input-field col s3">
+                <input type="text" id="clients" placeholder="Phone" />
+            </div>
+            <div class="input-field col s5">
+                <input type="text" id="clients" placeholder="Remarks" />
+            </div>
+            <div class="col s1">
+                <i class="material-icons remove">- remove</i>
+            </div>
+        </div>
+
+          <div class="form-holder-append"></div>
+          <div class="row">
+                    <div class="col-xs-4">
+                          <i class="material-icons add">+ add</i>
+            </div>
+		</div>
+    </div>
+</div>
+
+	<div class="wrapper">
 				<div>Client name:</div>
 				
 				<div>Address:</div>
@@ -237,11 +303,15 @@ document.getElementById("edit").innerHTML = localStorage.userEdits;
 				
 			</div>
 			
+		</div>
+ 		<div class="income">
 		<div class="incomeNum">Monthly Income:<br/>Real estate: Adress<br/> Type of proeprty: Personal Home <br/>purchase price: $$$ <br/>mortgage payements: $<br/> </div>
+			
+		
 		
 		<div id="chartContainer1" style="width: 700px; height: 500px;"></div>
 		<div id="chartContainer4" style="width: 700px; height: 500px;"></div> 
-		<div class="additionalInfo">Additional Info:</div>
+
 		</div>
 		
 		
@@ -255,14 +325,14 @@ document.getElementById("edit").innerHTML = localStorage.userEdits;
 		</div>
 		
 
+
+
+
+
+
+
+
 </div>
-
-
-
-
-
-
-
 
 <script src="https://canvasjs.com/assets/script/canvasjs.min.js"></script>
 <script type ="text/javascript" src="https://code.jquery.com/jquery-3.3.1.min.js"></script>
@@ -271,40 +341,48 @@ document.getElementById("edit").innerHTML = localStorage.userEdits;
 			$(".a").click(function () {
 				$(".Tasks").fadeIn();
 				$(".Client").fadeOut();
-				$(".invest").fadeOut();
 				$(".services").fadeOut();
 				$(".contact").fadeOut();
 			});
 			$(".b").click(function () {
 				$(".Tasks").fadeOut();
 				$(".Client").fadeIn();
-				$(".invest").fadeOut();
 				$(".services").fadeOut();
 				$(".contact").fadeOut();
 			});
 			$(".c").click(function () {
 				$(".Tasks").fadeOut();
 				$(".Client").fadeOut();
-				$(".invest").fadeIn();
-				$(".services").fadeOut();
+				$(".services").fadeIn();
 				$(".contact").fadeOut();
 			});
 			$(".d").click(function () {
 				$(".Tasks").fadeOut();
 				$(".Client").fadeOut();
-				$(".invest").fadeOut();
-				$(".services").fadeIn();
-				$(".contact").fadeOut();
-			});
-			$(".e").click(function () {
-				$(".Tasks").fadeOut();
-				$(".Client").fadeOut();
-				$(".invest").fadeOut();
 				$(".services").fadeOut();
 				$(".contact").fadeIn();
 			});
+			
 		});
 	
+	
+  var id_count = 1;
+  $('.add').on('click', function() {
+    var source = $('.form-holder:first'), clone = source.clone();
+    clone.find(':input').attr('id', function(i, val) {
+      return val + id_count;
+    });
+    clone.appendTo('.form-holder-append');
+    id_count++;
+  });
+
+
+$('body').on('click', '.remove', function() {
+    var closest = $(this).closest('.form-holder').remove();
+  });
+	
+
+  
 	var chart = new CanvasJS.Chart("chartContainer1", {
 	animationEnabled: true,
 	title:{
