--- a/public/index.html
+++ b/public/index.html
@@ -181,6 +181,13 @@ left:0;
 top:50%;
 
 }
+	#selectFiles{
+position:absolute;
+right:5%;
+top:10%;
+
+
+}
 </style>
 
 </head>
@@ -339,7 +346,10 @@ zingchart.render({
 		
 		
 		<div class="contact">
-			
+			<div id="selectFiles">Select Files: 
+			<input type="file" name="img" multiple>
+  <input type="submit">
+  </div>
 		</div>
 		
 
